random(6): Re-add undocumented support for floating point denominators

And document it in the manual page.

PR:		244139
Submitted by:	Keith White <kwhite AT site.uottawa.ca> (earlier version)